--- a/selección_subscripción/estyle.css
+++ b/selección_subscripción/estyle.css
@@ -9,7 +9,7 @@ body{
     margin: 0 auto;
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 65px;
     height: 100px;
     width: 700px;
     text-align: center;    
@@ -17,7 +17,7 @@ body{
 .Precio{
     position: absolute;
     display: inline;
-    top: 400px;
+    top: 425px;
     width: 230px;
     text-align: center;
     font-size: x-large;
@@ -26,41 +26,79 @@ body{
 }
 .planes{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 .Plan_1{
     background-color: rgb(198, 247, 246);
-    border-radius: 15%;
+    border-radius: 15% 15% 0% 0%;
     border: 3px solid rgb(110, 252, 219);
-    height: 280px;
+    height: 300px;
     width: 230px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .Plan_2{
     background-color: rgb(255, 250, 219);
-    border-radius: 15%;
+    border-radius: 15% 15% 0% 0%;
     border: 3px solid rgb(246, 235, 133);
-    height: 280px;
+    height: 300px;
     width: 230px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .Plan_3{
     background-color: rgb(254, 222, 255);
-    border-radius: 15%;
+    border-radius: 15% 15% 0% 0%;
     border: 3px solid rgb(238, 137, 242);
-    height: 280px;
+    height: 300px;
     width: 230px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .head_plan{
+    position: relative;
     text-align: center;
     font-size: x-large;
     font-weight: 700;
+    z-index: 3;
 }
 .descripción{
     position: relative;
-    top: -5%;
+    top: -40%;
     text-align: center;
     font-size: 15px;
     line-height: 25px;
+}
+.head_box__plan1{
+    position: relative;
+    background-color: rgb(145, 244, 220);
+    border-radius: 50% 50% 0% 0%;
+    top: -40%;
+    left: -3px;
+    height: 100px;
+    width: 236px;
+    z-index: 1;
+}
+.head_box__plan2{
+    position: relative;
+    background-color: rgb(246, 235, 133);
+    border-radius: 50% 50% 0% 0%;
+    top: -40%;
+    left: -3px;
+    height: 100px;
+    width: 236px;
+    z-index: 1;
+}
+.head_box__plan3{
+    position: relative;
+    background-color: rgb(238, 137, 242);
+    border-radius: 50% 50% 0% 0%;
+    top: -40%;
+    left: -3px;
+    height: 100px;
+    width: 236px;
+    z-index: 1;
 }
