--- a/selección_subscripción/estyle.css
+++ b/selección_subscripción/estyle.css
@@ -1,10 +1,12 @@
-*{
+* {
     font-family: sans-serif;
 }
-body{
+
+body {
     background-image: url(https://img.freepik.com/free-vector/mostera-background_53876-91263.jpg?w=1480&t=st=1695761842~exp=1695762442~hmac=8b71311d4b9a613bf3cd63dfca5622f7e93928d39a4675f1d93a042a946f925e);
 }
-.titulo{
+
+.titulo {
     display: block;
     margin: 0 auto;
     padding-top: 20px;
@@ -12,151 +14,114 @@ body{
     margin-bottom: 105px;
     height: 100px;
     width: 700px;
-    text-align: center;   
+    text-align: center;
 }
-h1{
+
+h1 {
     color: rgb(0, 42, 19);
     background-color: rgba(255, 255, 255, 0.331);
 }
-.Precio{
-    position: sticky;
-    text-align: center;
-    font-size: x-large;
-    font-weight: 800;
-    margin: auto;
-    z-index: 3;
+
+h3 {
+    font-size: 28px;
 }
-.planes{
+
+.planes {
     display: flex;
     justify-content: center;
-    
-    
-}
-.Plan_1{
-    background-color: rgb(255, 243, 207);
-    border-radius: 15% 15% 0% 0%;
-    border: 3px solid rgb(250, 230, 167);
-    height: 320px;
-    width: 230px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
-.Plan_2{
-    background-color: rgb(250, 229, 255);
-    border-radius: 15% 15% 0% 0%;
-    border: 3px solid rgb(243, 196, 255);
-    height: 320px;
-    width: 230px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.Plan_3{
-    background-color: rgb(198, 247, 246);
-    border-radius: 15% 15% 0% 0%;
-    border: 3px solid rgb(110, 252, 219);
-    height: 320px;
-    width: 230px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.head_plan{
+.plan {
     position: relative;
-    top:-10%;
+    display: flex;
+    flex-direction: column;
+    width: 230px;
+    margin: 0 10px;
+    transition-property: transform;
+    transition-duration: 500ms;
+}
+
+.plan:hover {
+    transform: scale(110%);
+}
+
+.Plan_1 {
+    background-color: rgb(255, 243, 207);
+    border: 3px solid rgb(250, 230, 167);
+}
+
+.Plan_2 {
+    background-color: rgb(250, 229, 255);
+    border: 3px solid rgb(243, 196, 255);
+}
+
+.Plan_3 {
+    background-color: rgb(198, 247, 246);
+    border: 3px solid rgb(110, 252, 219);
+}
+
+.head_plan {
     text-align: center;
     font-size: x-large;
     font-weight: 700;
-    z-index: 3;
 }
-.descripción{
-    position: relative;
-    top: -40%;
-    text-align: center;
+
+.descripción {
+    flex: 1;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     font-size: 15px;
     line-height: 25px;
-    height: 25%;
-}
-.head_box__plan1{
-    position: relative;
-    background-color:rgb(250, 230, 167);
-    border-radius: 50% 50% 0% 0%;
-    top: -40%;
-    left: -3px;
-    height: 100px;
-    width: 236px;
-    z-index: 1;
-}
-.head_box__plan2{
-    position: relative;
-    background-color: rgb(243, 196, 255);
-    border-radius: 50% 50% 0% 0%;
-    top: -40%;
-    left: -3px;
-    height: 100px;
-    width: 236px;
-    z-index: 1;
-}
-.head_box__plan3{
-    position: relative;
-    background-color: rgb(110, 252, 219);
-    border-radius: 50% 50% 0% 0%;
-    top: -40%;
-    left: -3px;
-    height: 100px;
-    width: 236px;
-    z-index: 1;
+    padding: 10px 0;
+    margin: 0;
+    flex-basis: 180px;
 }
 
-.Precio_box__1{
-    position: relative;
+.head_box {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    border-radius: 50% 50% 0 0;
+
+
+    padding-top: 18%;
+    padding-bottom: 10%;
+}
+
+.head_box__plan1 {
     background-color: rgb(250, 230, 167);
-    top: -17%;
-    left: -3px;
-    height: 65px;
-    width: 236px;
-    z-index: 1;
-}
-.Precio_box__2{
-    position: relative;
-    background-color: rgb(243, 196, 255);
-    top: -17%;
-    left: -3px;
-    height: 65px;
-    width: 236px;
-    z-index: 1;
-}.Precio_box__3{
-    position: relative;
-    background-color:rgb(110, 252, 219);
-    top: -17%;
-    left: -3px;
-    height: 65px;
-    width: 236px;
-    z-index: 1;
 }
 
-.Plan_1:hover{
-    transform: scale(110%);
-    transition-duration: 500ms, 500ms 
+.head_box__plan2 {
+    background-color: rgb(243, 196, 255);
 }
-.Plan_1:not(:hover){
-    transform: scale(100%);
-    transition-duration: 500ms;
+
+.head_box__plan3 {
+    background-color: rgb(110, 252, 219);
 }
-.Plan_2:hover{
-    transform: scale(110%);
-    transition-duration: 500ms, 500ms 
+
+.precio_box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 18px 0;
+
+    font-size: x-large;
+    font-weight: 800;
 }
-.Plan_2:not(:hover){
-    transform: scale(100%);
-    transition-duration: 500ms;
+
+.Precio_box__1 {
+    background-color: rgb(250, 230, 167);
 }
-.Plan_3:hover{
-    transform: scale(110%);
-    transition-duration: 500ms, 500ms 
+
+.Precio_box__2 {
+    background-color: rgb(243, 196, 255);
 }
-.Plan_3:not(:hover){
-    transform: scale(100%);
-    transition-duration: 500ms;
+
+.Precio_box__3 {
+    background-color: rgb(110, 252, 219);
 }
